RTSDK-7624 Fixed concurrency exception that could occur with Views used with multiple threads